# FastAPI_Task

./: README.md
FastAPI_Task (D-1)/: main.py  pyproject.toml
FastAPI_Task (D-1)/app/schemas/: users.py
FastAPI_Task (D-2)/: main.py  pyproject.toml
FastAPI_Task (D-2)/app/models/: movies.py
FastAPI_Task (D-2)/app/schemas/: movies.py
